Mon Mar  7 00:32:38 CET 2005 (tk)
---------------------------------
  * configure: add support for QNX 6 (patch by mikep*kaluga.org)

Sat Mar  5 11:07:34 GMT 2005 (njh)
----------------------------------
  * clamav-milter:	Note about --local needed if incoming socket is INET
				domain

Fri Mar  4 14:20:22 GMT 2005 (njh)
----------------------------------
  * libclamav/blob.c:	Fix for QNX version 6 sometimes returning ETOOLONG,
				patch from mikep at kaluga.org

Fri Mar  4 03:18:20 CET 2005 (tk)
---------------------------------
  * freshclam/manager.c: additional verbose-mode messages (Stephen Gran)

Fri Mar  4 02:47:17 CET 2005 (tk)
---------------------------------
  * docs: fix some typos (reported by Koryn Grant <koryn*endace.com> and
	  Paul Welsh <paul*welshfamily.com>)

Fri Mar  4 02:42:43 CET 2005 (tk)
---------------------------------
  * freshclam/freshclam.c: add missing argument for format string. Patch by
			 Enrico Scholz <enrico.scholz*informatik.tu-chemnitz.de>

Fri Mar  4 02:21:42 CET 2005 (tk)
---------------------------------
  * clamd/others.c: include <sys/param.h> to fix compilation error on FreeBSD
		    4.2 (Sergey Smitienko <hunter*comsys.com.ua>)

Fri Mar  4 02:08:45 CET 2005 (tk)
---------------------------------
  * libclamav/scanners.c: close zzip descriptor when tmpfile() fails
			  (patch by <ocherechin*ukr.net>)

Fri Mar  4 01:57:28 CET 2005 (tk)
---------------------------------
  * libclamav, freshclam: "DON'T PANIC!" warnings (idea by Luca Gibelli)

Thu Mar  3 09:22:57 GMT 2005 (njh)
----------------------------------
  * clamav-milter:	Up-issue

Tue Mar  1 18:57:18 GMT 2005 (njh)
----------------------------------
  * clamav-milter:	Improved database update detection when not --external

Tue Mar  1 02:29:54 CET 2005 (tk)
---------------------------------
  * clamscan: use --include-dir/exclude-dir for directories instead of
	      --include/exclude

Tue Mar  1 02:16:15 CET 2005 (tk)
---------------------------------