@@ -27,4 +27,6 @@ int cli_scanbuff(const char *buffer, unsigned int length, const char **virname, 
 
 int cli_validatesig(unsigned short target, unsigned short ftype, const char *offstr, unsigned long int fileoff, int desc, const char *virname);
 
+int cli_checkfp(int fd, const struct cl_node *root);
+
 #endif
